--- a/iceoxino.first.git/.project
+++ b/iceoxino.first.git/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>iceoxino.first.git</name>
+	<name>iceoxino.first.gittest</name>
 	<comment></comment>
 	<projects>
 	</projects>
